# lighttracer

./: .gitignore  README.md
lighttracer/: CMakeCache.txt  CMakeLists.txt
lighttracer/lighttracer/: Input.h  Layer.h  Logger.cpp  Logger.h  Material.h  Photon.h  bucket.h  classic_sampling.cpp  classic_sampling.h  config.h  constants.h  dwivedi_logfile.txt  dwivedi_output.csv  dwivedi_sampling.cpp  dwivedi_sampling.h  lighttracer.cpp  logfile.txt  mcml_parser.cpp  mcml_parser.h  output.csv  output.h  propagation.cpp  propagation.h  start.cpp  stdafx.cpp  testcpp.cpp
lighttracer/lighttracer/mcml_examples/: abs0.01sca100anis0.5pho5000.txt  abs0.01sca100anis0.9pho5000.txt  abs0.01sca100anis0pho5000.txt  abs0.1sca10g0.5pho100.txt  abs0.1sca10g0.5pho900.txt  abs0.1sca10g0.9pho1000.txt  abs0.1sca10g0.9pho5000.txt  abs0.1sca10g0pho500.txt  abs0.1sca10g0pho5000.txt  abs1.0sca1.0g0pho5000.txt  abs100sca0.01g0.9pho1000000000.txt  abs10sca0.1g0.5pho10000.txt  abs10sca0.1g0.9pho10000.txt  abs10sca0.1g0.9pho10000000.txt  abs10sca0.1g0.9pho5000.txt  abs10sca0.1g0pho15000.txt  abs10sca0.1g0pho20000.txt  abs10sca1g0pho15000.txt  abs1sca1g0.5pho2000.txt  abs1sca1g0.9pho15000.txt  abs1sca1g0pho100000.txt  bli.txt  example_1.txt  example_10.txt  example_11.txt  example_12.txt  example_2.txt  example_3.txt  example_3_mil.txt  example_4.txt  example_5.txt  example_6.txt  example_7.txt  example_8.txt  example_9.txt
lighttracer/lighttracer/own_examples/: out20-100-0.3.csv  out20-100-0.3.txt
lighttracer/lighttracer/plot/: clas_logfile.txt  clas_output.csv  dwivedi_logfile.txt  manyplots.csv  (+2 more)
(+13 files in other folders)
